[package]
name = "tracy-rs"
version = "0.1.0"
authors = [
  "Alexander 'z33ky' Hirsch <1zeeky@gmail.com>",
  "Chip Collier <chip@kopernikusauto.com>"
]
edition = "2018"

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2.60"

[features]
default = []
enable = []
no_exit = []
on_demand = []
dll = []
nightly = []
